@@ -63,6 +63,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9374: Generic parsing of query and fragment portions of url for any
+  scheme. Supported both by RFC3986 and RFC2396.
+
 - Issue #14798: Fix the functions in pyclbr to raise an ImportError
   when the first part of a dotted name is not a package. Patch by
   Xavier de Gaye.
